--- a/React-Projects/social-media-platform/src/App.css
+++ b/React-Projects/social-media-platform/src/App.css
@@ -121,6 +121,11 @@
       transform: translateX(-100%); /* Initially hidden */
       transition: transform 0.3s ease-in-out;
     }
+    .NotificationList{
+        margin-left: 1%;
+        margin-right: 1%;
+        margin-top: 15%;
+    }
     .Loginpage{
         margin-left: 14%;
         margin-top: 25%;
@@ -133,11 +138,6 @@
         margin-bottom: 1%;
         width: 65%;
     
-    }
-    .activity{
-        margin-top: 16%;
-        margin-bottom: 1%;
-        width: 95%;
     }
     .sidebar.show {
       transform: translateX(0);
@@ -184,8 +184,9 @@
         width: 95%;
     }
     .post-Maker{
-        margin-left: 1%;
-        margin-right: 1%;
+        margin-left: 3%;
+        margin-right: 3%;
+        margin-top: 19%;
     }
     .trend-box{
         margin-left: 1%;
@@ -202,6 +203,7 @@
     .notification{
         margin-left: 1%;
         margin-right: 1%;
+        margin-top: 2%;
     }
     .FriendReq-Container{
         margin-left: 1%;
@@ -215,6 +217,7 @@
         margin-left: 4%;
     }
     
+    
 }
 @media (min-width: 770px) {
     .post-Container{
@@ -226,6 +229,11 @@
         width: 100%;
         margin-left: 0%;
       }
+      .NotificationList{
+        margin-left: 1%;
+        margin-right: 1%;
+        margin-top: 15%;
+    }
     .nav-container{
         --bs-nav-link-padding-x: 1rem;
         --bs-nav-link-padding-y: 0.5rem;
@@ -263,7 +271,8 @@
     }
     .post-Maker{
         margin-left: 38%;
-        margin-right: 1%;
+        margin-right: 3%;
+        margin-top: 8%;
     }
     .trend-box{
         margin-left: 38%;        
@@ -284,7 +293,12 @@
     .notification{
         margin-left: 38%;        
         margin-right: 1%;
-
+        margin-top: 2%;
+    }
+    .NotificationList{
+        margin-left: -8%;
+        margin-right: 1%;
+        margin-top: 3%;
     }
 }
 @media (min-width: 1100px) {
@@ -305,6 +319,11 @@
         margin-bottom: 1%;
         width: 28%;
     
+    }
+    .NotificationList{
+        margin-left: 1%;
+        margin-right: 1%;
+        margin-top: 15%;
     }
     .nav-container{
         --bs-nav-link-padding-x: 1rem;
@@ -332,6 +351,7 @@
     .post-Maker{
         margin-left: 23%;
         margin-right: 1%;
+        margin-top: 5%;
     }
     .trend-box{
         margin-left: 23%;        
@@ -350,9 +370,13 @@
     .notification{
         margin-left: 23%;        
         margin-right: 1%;
-
+        margin-top: 2%;
     }
-        
+    .NotificationList{
+        margin-left: 1%;
+        margin-right: 1%;
+        margin-top: 2%;
+    }
 }
 
 @media (min-width: 1400px) {
@@ -379,6 +403,7 @@
     .post-Maker{
         margin-left: 19%;
         margin-right: 1%;
+        margin-top: 6%;
     }
     .trend-box{
         margin-left: 19%;        
@@ -410,7 +435,12 @@
     .notification{
         margin-left: 19%;        
         margin-right: 1%;
-
+        margin-top: 2%;
+    }
+    .NotificationList{
+        margin-left: 1%;
+        margin-right: 1%;
+        margin-top: 15%;
     }
         
 }
@@ -459,6 +489,8 @@
     .post-Maker{
         margin-left: 31%;
         margin-right: 1%;
+        margin-top: 8%;
+
     }
     .trend-box{
         margin-left: 28%;        
@@ -478,10 +510,18 @@
         margin-left: 31%;
         margin-right: 1%;
     }
-        
+    .CreateInputs{
+        border-radius: 4%;
+        margin: 3% 2%;
+    }
+    .NotificationList{
+        margin-left: -3%;
+        margin-right: 1%;
+        margin-top: 2%;
+    }
 }
 .hashtags{
-    margin: 1%;
+    margin: 0.5%;
 }
 .ProfileImagesPost{
     width: 50px; /* Set equal width */
@@ -489,7 +529,4 @@
   object-fit: cover; /* Ensure image fills the circle */
   border-radius: 50%; /* Make the image circular */
   border: 2px solid #ddd; 
-}
-.CreateInputs{
-    border-radius: 4%;
 }
